beatlocker-server/tests/snapshots/integration__getPlaylist.json.snap
---
source: beatlocker-server/tests/integration.rs
expression: "res.json::<serde_json::Value>().await"
---
{
  "subsonic-response": {
    "playlist": {
      "created": "2020-02-02T00:00:00Z",
      "duration": 6,
      "entry": [
        {
          "album": "Motorway (Original Motion Picture Soundtrack)",
          "albumId": "cbe80ce0-eb7e-37f6-a70a-87ab0dec3ac9",
          "artist": "Alex Gopher",
          "artistId": "c2042f2f-fbda-64e4-ff33-62bad6853d99",
          "bitRate": 160,
          "contentType": "audio/ogg",
          "created": "2020-02-02T00:00:00Z",
          "discNumber": 1,
          "duration": 6,
          "genre": "Unknown genre",
          "id": "7b2abff8-3571-99f6-b224-56250315eb14",
          "isDir": false,
          "isVideo": false,
          "parent": "68f8b71b-d9b4-c77e-c7f1-e4af263bcd93",
          "size": 105424,
          "suffix": "ogg",
          "title": "Diamond Dealers",
          "track": 1,
          "year": 2021
        }
      ],
      "id": "68f8b71b-d9b4-c77e-c7f1-e4af263bcd93",
      "name": "Motorway OST",
      "public": true,
      "songCount": 1
    },
    "serverVersion": "unknown",
    "status": "ok",
    "type": "beatlocker",
    "version": "1.16.1"
  }
}
