beatlocker-server/tests/snapshots/integration__getPlaylist.xml.snap
---
source: beatlocker-server/tests/integration.rs
expression: res.xml_string().await
---
<subsonic-response status="ok" version="1.16.1" type="beatlocker" serverVersion="unknown">
  <playlist id="9600e0e0-145e-644d-d38f-e501a6252d79" name="Motorway OST" created="2020-02-02T00:00:00Z" public="true" song_count="1" duration="6">
    <entry id="7b2abff8-3571-99f6-b224-56250315eb14" parent="9600e0e0-145e-644d-d38f-e501a6252d79" isDir="false" created="2020-02-02T00:00:00Z" title="Diamond Dealers" album="Motorway (Original Motion Picture Soundtrack)" artist="Alex Gopher" track="1" year="2021" size="105424" contentType="audio/ogg" suffix="ogg" duration="6" bitRate="160" discNumber="1" albumId="832e44af-9d23-c38e-34af-b7f4cf92b096" artistId="be74adf7-0dfc-e5c6-e19e-0058776e90d1" isVideo="false" genre="Unknown genre"/>
  </playlist>
</subsonic-response>
