beatlocker-server/tests/snapshots/integration__getPlaylists.json.snap
---
source: beatlocker-server/tests/integration.rs
expression: "res.json::<serde_json::Value>().await"
---
{
  "subsonic-response": {
    "playlists": {
      "playlist": [
        {
          "created": "2020-02-02T00:00:00Z",
          "duration": 6,
          "id": "694a6eee-8eac-2a60-af58-e96493edafcb",
          "name": "MotorwayNested",
          "public": true,
          "songCount": 1
        },
        {
          "created": "2020-02-02T00:00:00Z",
          "duration": 6,
          "id": "9600e0e0-145e-644d-d38f-e501a6252d79",
          "name": "Motorway OST",
          "public": true,
          "songCount": 1
        },
        {
          "created": "2020-02-02T00:00:00Z",
          "duration": 12,
          "id": "f68bd7e1-0e30-21db-beea-aad58d2429ca",
          "name": "Richard Bona",
          "public": true,
          "songCount": 2
        }
      ]
    },
    "serverVersion": "unknown",
    "status": "ok",
    "type": "beatlocker",
    "version": "1.16.1"
  }
}
