beatlocker-server/tests/snapshots/integration__getSongsByGenre.xml.snap
---
source: beatlocker-server/tests/integration.rs
assertion_line: 213
expression: res.xml_string().await
---
<subsonic-response status="ok" version="1.16.1" type="beatlocker" serverVersion="unknown">
  <songsByGenre>
    <song id="72315dd4-d365-8f1e-9cb7-c0c11f680af1" parent="75a22ef8-9597-4c55-9be1-097d94babc31" isDir="false" created="2020-02-02T00:00:00Z" title="Akwa Samba Yaya" album="Tiki" artist="Richard Bona" track="2" year="2021" size="765952" contentType="audio/mp3" suffix="mp3" duration="27" albumId="68bc272d-d36b-9191-b815-02627be8ea65" artistId="d094e9f8-a8e2-1737-0cfc-c4b24ab0aedf" isVideo="false" genre="World Music"/>
  </songsByGenre>
</subsonic-response>
