beatlocker-server/tests/snapshots/integration__getStarred_withoutRadarUnit.json.snap
---
source: beatlocker-server/tests/integration.rs
assertion_line: 292
expression: "res.json::<serde_json::Value>().await"
---
{
  "subsonic-response": {
    "serverVersion": "unknown",
    "starred": {
      "album": [
        {
          "duration": 6,
          "id": "68f8b71b-d9b4-c77e-c7f1-e4af263bcd93",
          "isDir": true,
          "name": "Motorway OST",
          "parent": "00000000-0000-0000-0000-000000000000",
          "songCount": 1,
          "starred": "2020-02-02T00:00:00Z",
          "title": "Motorway OST"
        }
      ],
      "artist": [
        {
          "albumCount": 1,
          "id": "d094e9f8-a8e2-1737-0cfc-c4b24ab0aedf",
          "name": "Richard Bona",
          "starred": "2020-02-02T00:00:00Z"
        }
      ]
    },
    "status": "ok",
    "type": "beatlocker",
    "version": "1.16.1"
  }
}
